--- a/src/main/webapp/application/top.html
+++ b/src/main/webapp/application/top.html
@@ -37,7 +37,7 @@ $(function(){
     <ul>
     <li><span><img src="images/help.png" title="帮助" class="helpimg"/></span><a href="#">帮助</a></li>
     <li><a href="#">关于</a></li>
-    <li><a href="login.html" target="_parent">退出</a></li>
+    <li><a href="login.jsp" target="_parent">退出</a></li>
     </ul>
      
     <div class="user">
