--- a/src/main/webapp/application/left.html
+++ b/src/main/webapp/application/left.html
@@ -33,14 +33,22 @@ $(function(){
 	<div class="lefttop"><span></span>通讯录</div>
     
     <dl class="leftmenu">
+
+        <dd>
+            <div class="title">
+                <span><img src="images/leftico01.png" /></span>首页
+            </div>
+            <ul class="menuson">
+                <li class="active"><cite></cite><a href="index.html" target="rightFrame">欢迎使用</a><i></i></li>
+            </ul>
+        </dd>
         
     <dd>
     <div class="title">
     <span><img src="images/leftico01.png" /></span>用户信息管理
     </div>
     	<ul class="menuson">
-        <li class="active"><cite></cite><a href="index.html" target="rightFrame">首页模版</a><i></i></li>
-        <li><cite></cite><a href="right.html" target="rightFrame">教师信息管理</a><i></i></li>
+        <li><cite></cite><a href="/TeacherController/showTeachers.htm" target="rightFrame">教师信息管理</a><i></i></li>
         <li><cite></cite><a href="imgtable.html" target="rightFrame">学生信息管理</a><i></i></li>
         <li><cite></cite><a href="form.html" target="rightFrame">管理员信息管理</a><i></i></li>
         <li><cite></cite><a href="imglist.html" target="rightFrame">添加新账户</a><i></i></li>
