--- a/src/main/webapp/application/left.html
+++ b/src/main/webapp/application/left.html
@@ -49,8 +49,8 @@ $(function(){
     </div>
     	<ul class="menuson">
         <li><cite></cite><a href="/TeacherController/showTeachers.htm" target="rightFrame">教师信息管理</a><i></i></li>
-        <li><cite></cite><a href="imgtable.html" target="rightFrame">学生信息管理</a><i></i></li>
-        <li><cite></cite><a href="form.html" target="rightFrame">管理员信息管理</a><i></i></li>
+        <li><cite></cite><a href="/StudentController/showStudents.htm" target="rightFrame">学生信息管理</a><i></i></li>
+        <li><cite></cite><a href="/AdminController/showAdmins.htm" target="rightFrame">管理员信息管理</a><i></i></li>
         <li><cite></cite><a href="imglist.html" target="rightFrame">添加新账户</a><i></i></li>
         </ul>    
     </dd>
